kustomize/dev/mentum-eks-cluster-dev/backend/analytics/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
  labels:
    app.mentum.dev/name: analytics
    app.mentum.dev/appRevision: ""
    app.mentum.dev/namespace: mentum
    app.mentum.dev/enviroment: dev
    app.mentum.dev/tier: backend
    app.mentum.dev/resourceType: Deployment
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app.mentum.dev/name: analytics
      app.mentum.dev/tier: backend
  template:
    metadata:
      labels:
        app.mentum.dev/name: analytics
        app.mentum.dev/tier: backend
    spec:
      containers:
        - name: default
          image: 238975939821.dkr.ecr.us-east-1.amazonaws.com/analytics-backend
          imagePullPolicy: Always
          # TODO: FIX THIS
          ports:
            - containerPort: 4000
              name: http
              protocol: TCP
          volumeMounts: 
            - mountPath: /usr/src/app/jwks.json
              name: analytics-jwks
              readOnly: true
              subPath: jwks.json
      volumes: 
        - name: analytics-jwks
          secret:
            secretName: analytics-jwks
